HelloUltraviolet/Fixtures/RejectedSource/Keys/SharedClosureYieldKeys/Expected.uv
//! Expected diagnostic metadata for the SharedClosureYieldKeys rejected-source specimen.

expectedDiagnostic("E-CON-0213", "rule.21.A-Closure-Yield-Keys-Err")
